--- a/app/(pages)/(index-page)/_components/RiverCow/RiverCow.module.scss
+++ b/app/(pages)/(index-page)/_components/RiverCow/RiverCow.module.scss
@@ -81,10 +81,10 @@
             margin-top: 0;
         }
     }
-    :last-child {
-        width: max-content;
-        display: block;
-    }
+    // :last-child {
+    //     width: max-content;
+    //     display: block;
+    // }
 }
 
 .base_tree_container {
