--- a/app/(pages)/(index-page)/_components/WhatIsHackdavis/WhatIsHackdavis.module.scss
+++ b/app/(pages)/(index-page)/_components/WhatIsHackdavis/WhatIsHackdavis.module.scss
@@ -164,9 +164,11 @@
 
             .heading{
                 font-size: 3rem;
+                width: 80vw;
             }
             .paragraph {
                 font-size: 1rem;
+                width: 50vw;
             }
         }
     }
@@ -177,9 +179,11 @@
         .text {
             .heading{
                 font-size: 2.81rem;
+                width: 80vw;
             }
             .paragraph {
                 font-size: 0.94rem;
+                width: 50vw;
             }
         }
         .logStuff {
